[gd_scene load_steps=17 format=3 uid="uid://bmbr0sfkf54tq"]

[ext_resource type="Script" uid="uid://bqk7a0kl6l0jj" path="res://scenes/sketch_roulette_main_script.gd" id="1_ax7xg"]
[ext_resource type="Texture2D" uid="uid://dtyrj12ky41iu" path="res://icons/edit_icon.svg" id="2_exmdq"]
[ext_resource type="Script" uid="uid://cmsanqwtm4t3l" path="res://scenes/tags_tree_script.gd" id="3_6aa16"]
[ext_resource type="Texture2D" uid="uid://btuqksudx8clh" path="res://icons/trash_bin.svg" id="3_j4oxs"]
[ext_resource type="Texture2D" uid="uid://b3e6c867xjaph" path="res://icons/new_folder_icon.svg" id="3_k1aoa"]
[ext_resource type="Texture2D" uid="uid://dsmluyy8xjrcu" path="res://icons/copy_icon.svg" id="4_6aa16"]
[ext_resource type="Script" uid="uid://6gwmydnishtn" path="res://scenes/categories_tree.gd" id="4_exmdq"]
[ext_resource type="AudioStream" uid="uid://gi1ymi1byihj" path="res://audio/finish_sound.wav" id="8_j4oxs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4oxs"]
content_margin_left = 5.0
content_margin_top = 3.0
content_margin_right = 5.0
content_margin_bottom = 3.0
bg_color = Color(0.0562916, 0.0562916, 0.0562916, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_c4u0h"]
TooltipPanel/styles/panel = SubResource("StyleBoxFlat_j4oxs")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyee0"]
content_margin_left = 8.0
content_margin_top = 10.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.180392, 0.180392, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4u0h"]
bg_color = Color(0.172833, 0.172833, 0.172833, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qvr6y"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.0885599, 0.0885599, 0.0885599, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7h58"]
bg_color = Color(0.186497, 0.20679, 0.23864, 1)

[sub_resource type="Theme" id="Theme_m7h58"]
Tree/styles/title_button_hover = SubResource("StyleBoxFlat_c4u0h")
Tree/styles/title_button_normal = SubResource("StyleBoxFlat_qvr6y")
Tree/styles/title_button_pressed = SubResource("StyleBoxFlat_m7h58")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sq7ho"]
content_margin_left = 6.0
content_margin_top = 8.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.122252, 0.122252, 0.122252, 1)

[node name="SketchRouletteMain" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_c4u0h")
theme_override_styles/panel = SubResource("StyleBoxFlat_tyee0")
script = ExtResource("1_ax7xg")

[node name="MainWindow" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="MainWindow"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Sketch Roulette"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainWindow"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainWindow"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainWindow/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
alignment = 1

[node name="Label" type="Label" parent="MainWindow/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Max Spiciness:"

[node name="SpicySpnBx" type="SpinBox" parent="MainWindow/HBoxContainer/HBoxContainer"]
layout_mode = 2
allow_greater = true

[node name="EnableNSFWChkBtn" type="CheckButton" parent="MainWindow/HBoxContainer"]
layout_mode = 2
tooltip_text = "Will include NSFW tags
for the list."
text = "NSFW"

[node name="EditTagsBtn" type="Button" parent="MainWindow/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Edit tags"
icon = ExtResource("2_exmdq")
icon_alignment = 1
expand_icon = true

[node name="HSeparator2" type="HSeparator" parent="MainWindow"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MainWindow"]
layout_mode = 2
alignment = 1

[node name="ErasePresetBtn" type="Button" parent="MainWindow/HBoxContainer3"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Erase Preset"
disabled = true
icon = ExtResource("3_j4oxs")
icon_alignment = 1
expand_icon = true

[node name="PresetOptBtn" type="OptionButton" parent="MainWindow/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3
selected = 0
item_count = 2
popup/item_0/text = "Default"
popup/item_0/id = 0
popup/item_1/text = "Use All"
popup/item_1/id = 1

[node name="RollTagsBtn" type="Button" parent="MainWindow/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Roll for Tags"

[node name="HSeparator3" type="HSeparator" parent="MainWindow"]
layout_mode = 2

[node name="TagsTree" type="Tree" parent="MainWindow"]
layout_mode = 2
size_flags_vertical = 3
hide_root = true
script = ExtResource("3_6aa16")

[node name="HSeparator5" type="HSeparator" parent="MainWindow"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainWindow"]
layout_mode = 2

[node name="Label" type="Label" parent="MainWindow/VBoxContainer"]
layout_mode = 2
text = "Time"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MainWindow/VBoxContainer"]
layout_mode = 2

[node name="HourContainer" type="HBoxContainer" parent="MainWindow/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HourSpnBx" type="SpinBox" parent="MainWindow/VBoxContainer/HBoxContainer3/HourContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 99.0
update_on_text_changed = true

[node name="Label2" type="Label" parent="MainWindow/VBoxContainer/HBoxContainer3/HourContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "Hrs"

[node name="VSeparator" type="VSeparator" parent="MainWindow/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="MinuteContainer" type="HBoxContainer" parent="MainWindow/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MinSpnBx" type="SpinBox" parent="MainWindow/VBoxContainer/HBoxContainer3/MinuteContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 59.0
value = 1.0
update_on_text_changed = true

[node name="Label2" type="Label" parent="MainWindow/VBoxContainer/HBoxContainer3/MinuteContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "Min"

[node name="VSeparator2" type="VSeparator" parent="MainWindow/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="SecondContainer" type="HBoxContainer" parent="MainWindow/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SecSpnBx" type="SpinBox" parent="MainWindow/VBoxContainer/HBoxContainer3/SecondContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 59.0
update_on_text_changed = true

[node name="Label2" type="Label" parent="MainWindow/VBoxContainer/HBoxContainer3/SecondContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "Secs"

[node name="HSeparator4" type="HSeparator" parent="MainWindow"]
layout_mode = 2

[node name="StartTimerBtn" type="Button" parent="MainWindow"]
layout_mode = 2
text = "Start Timer"

[node name="EditTagWindow" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="EditTagWindow"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Categories & Tags"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewCategoryBtn" type="Button" parent="EditTagWindow/Label"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
tooltip_text = "Create category"
icon = ExtResource("3_k1aoa")
expand_icon = true

[node name="TagCatTree" type="Tree" parent="EditTagWindow"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_m7h58")
theme_override_colors/children_hl_line_color = Color(0.621524, 0.621524, 0.621524, 1)
theme_override_colors/parent_hl_line_color = Color(0.619608, 0.619608, 0.619608, 1)
theme_override_constants/inner_item_margin_right = 18
theme_override_constants/button_margin = 6
theme_override_constants/draw_guides = 0
theme_override_constants/draw_relationship_lines = 1
theme_override_constants/parent_hl_line_width = 2
theme_override_constants/children_hl_line_width = 2
columns = 3
column_titles_visible = true
hide_root = true
select_mode = 1
script = ExtResource("4_exmdq")

[node name="HBoxContainer" type="HBoxContainer" parent="EditTagWindow"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EditTagWindow/HBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2

[node name="OverwritePresetBtn" type="Button" parent="EditTagWindow/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Overwrite Preset"

[node name="SavePresetBtn" type="Button" parent="EditTagWindow/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Save as Preset"

[node name="DoneBtn" type="Button" parent="EditTagWindow/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Done"

[node name="AddTags" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="AddTags"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Add Tags"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TagsTxtEdt" type="TextEdit" parent="AddTags"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Add tags...
One line per tag."
wrap_mode = 1

[node name="AddAsNSFWChkBx" type="CheckBox" parent="AddTags"]
layout_mode = 2
size_flags_horizontal = 8
text = "As NSFW"

[node name="HBoxContainer" type="HBoxContainer" parent="AddTags"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="CancelAddBtn" type="Button" parent="AddTags/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="AddTagsBtn" type="Button" parent="AddTags/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "Add Tags"

[node name="CountdownContainer" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CountdownContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="CountdownContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Your tags"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CopyTagsBtn" type="Button" parent="CountdownContainer/VBoxContainer/Label"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
tooltip_text = "Copy tags"
icon = ExtResource("4_6aa16")
icon_alignment = 1
expand_icon = true

[node name="PanelContainer" type="PanelContainer" parent="CountdownContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sq7ho")

[node name="SelectedTagsTxtEdt" type="TextEdit" parent="CountdownContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
editable = false
wrap_mode = 1

[node name="HSeparator" type="HSeparator" parent="CountdownContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CountdownContainer"]
layout_mode = 2
alignment = 1

[node name="TimeLabel" type="Label" parent="CountdownContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "00:00:00"
horizontal_alignment = 2

[node name="Label" type="Label" parent="CountdownContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="TotalTimeLabel" type="Label" parent="CountdownContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "00:00:00"

[node name="HBoxContainer2" type="HBoxContainer" parent="CountdownContainer"]
layout_mode = 2

[node name="StopTimeBtn" type="Button" parent="CountdownContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stop Timer"

[node name="PauseTimeBtn" type="Button" parent="CountdownContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "Pause Timer"

[node name="ReturnBtn" type="Button" parent="CountdownContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Return"

[node name="SecondTimer" type="Timer" parent="."]

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_j4oxs")
